--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Website</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -107,6 +108,11 @@
             text-decoration: none;
             font-size: 14px;
         }
+        .link {
+            text-decoration:none;
+            font-size: 12px;
+            font-weight: 600
+        }
     </style>
 </head>
 <body>
@@ -132,7 +138,7 @@
 
         <hr style="margin-top:40px">
         <br><br><br><br><br>
-        <a href="https://google.com" style="text-decoration:none;font-size: 12px;"><i class="fa fa-link"></i> Log in with your account?</a>
+        <a href="https://google.com" class="link"><i class="fa fa-link"></i> Log in with your account?</a>
     
     </form>
 </div>
@@ -140,7 +146,7 @@
 <div class="foot">
 <hr>
 <footer>
-    <p style="text-align:center"> <i class="fa fa-copyright"></i> <span id="year"></span> mehtisup </p>
+    <p style="text-align:center;font-size:12px"> <i class="fa fa-copyright"></i> <span id="year"></span> mehtisup </p>
 </footer>
 </div>
 
